--- a/assets/forca.css
+++ b/assets/forca.css
@@ -6,9 +6,10 @@
   align-items: center;
 }
 #box .box-boneco {
+  margin-top: 10px;
   position: relative;
   border: 1px solid #fff;
-  width: 30vw;
+  width: 200px;
   height: 40vh;
   border-radius: 20px;
   background-color: rgba(0, 0, 0, 0.2901960784);
@@ -24,6 +25,7 @@
   left: 50%;
   margin-top: 10px;
   transform: translateX(-50%);
+  display: none;
 }
 #box .tronco {
   height: 100px;
@@ -32,60 +34,55 @@
   left: 50.2%;
   top: 34%;
   transform: translateX(-50%);
+  display: none;
 }
 #box .braco-esquerdo {
   height: 50px;
   border: 1px solid #fff;
-  left: 46%;
+  left: 40%;
   transform: rotate(45deg);
   top: 34%;
+  display: none;
 }
 #box .braco-direito {
   height: 50px;
   border: 1px solid #fff;
-  left: 54%;
+  left: 59%;
   transform: rotate(-45deg);
   top: 34%;
+  display: none;
 }
 #box .pe-esquerdo {
   height: 50px;
   border: 1px solid #fff;
-  left: 54%;
+  left: 59%;
   transform: rotate(-45deg);
   top: 64%;
+  display: none;
 }
 #box .pe-direito {
   height: 50px;
   border: 1px solid #fff;
-  left: 46%;
+  left: 40%;
   transform: rotate(45deg);
   top: 64%;
+  display: none;
 }
 #box .dica {
   color: #fff;
   margin: 20px 0;
 }
 #box #secret-word {
-  border: 1px solid rgb(255, 255, 255);
-  padding: 20px;
+  padding: 0px 0 28px 0;
   width: 50%;
   color: #fff;
   position: relative;
   display: flex;
   justify-content: center;
+  font-size: xxx-large;
+  white-space: nowrap;
 }
 #box .bars {
-  border: 1px solid red;
-  width: 40px;
-  bottom: 2px;
-  margin-right: 20px;
-}
-#box .input {
-  padding: 10px;
-  width: 55px;
-  height: 50px;
-  margin: 20px;
-  font-size: 39px;
   text-align: center;
 }
 @media (min-width: 900px) {
