--- a/jogoDaForca/forca.scss
+++ b/jogoDaForca/forca.scss
@@ -5,9 +5,10 @@
     flex-direction: column;
     align-items: center;
     .box-boneco {
+        margin-top: 10px;
         position: relative;
         border: 1px solid #fff;
-        width: 30vw;
+        width: 200px;
         height: 40vh;
         border-radius: 20px;
         background-color: #0000004a;
@@ -23,6 +24,7 @@
         left: 50%;
         margin-top: 10px;
         transform: translateX(-50%);
+        display: none;
     }
 
     .tronco {
@@ -32,35 +34,40 @@
         left: 50.2%;
         top: 34%;
         transform: translateX(-50%);
+        display: none;
     }
 
     .braco-esquerdo {
         height: 50px;
         border: 1px solid #fff;
-        left: 46%;
+        left: 40%;
         transform: rotate(45deg);
         top: 34%;
+        display: none;
     }
     .braco-direito {
         height: 50px;
         border: 1px solid #fff;
-        left: 54%;
+        left: 59%;
         transform: rotate(-45deg);
         top: 34%;
+        display: none;
     }
     .pe-esquerdo {
         height: 50px;
         border: 1px solid #fff;
-        left: 54%;
+        left: 59%;
         transform: rotate(-45deg);
         top: 64%;
+        display: none;
     }
     .pe-direito {
         height: 50px;
         border: 1px solid #fff;
-        left: 46%;
+        left: 40%;
         transform: rotate(45deg);
         top: 64%;
+        display: none;
     }
 
     .dica {
@@ -69,30 +76,28 @@
     }
     
     #secret-word {
-        border: 1px solid rgb(255, 255, 255);
-        padding: 20px;
+        padding: 0px 0 28px 0;
         width: 50%;
         color: #fff;
         position: relative;
         display: flex;
         justify-content: center;
+        font-size: xxx-large;
+        white-space: nowrap;
     }
 
     .bars {
-        border: 1px solid red;
-        width: 40px;
-        bottom: 2px;
-        margin-right: 20px;
-    }
-
-    .input {
-        padding: 10px;
-        width:55px;
-        height: 50px;
-        margin: 20px;
-        font-size: 39px;
         text-align: center;
     }
+
+    // .input {
+    //     padding: 10px;
+    //     width:55px;
+    //     height: 50px;
+    //     margin: 20px;
+    //     font-size: 39px;
+    //     text-align: center;
+    // }
 
     @media (min-width: 900px) {
         
