--- a/paleta.scss
+++ b/paleta.scss
@@ -1,6 +1,6 @@
 /* COLORS */
 
-.colorWhite{color:#fff};
+.colorWhite{color: rgb(185 185 185)};
 .colorBlack{color:#000};
 
 
@@ -21,7 +21,7 @@
 
 .container {
     background-color: rgba(31, 31, 31, 0.492);
-    color: #fff;
+    color: rgb(185 185 185);
 }
 
 .container-top {
