--- a/assets/forca.css
+++ b/assets/forca.css
@@ -4,13 +4,14 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  margin-top: 50px;
 }
 #box .box-boneco {
   margin-top: 10px;
   position: relative;
   border: 1px solid #fff;
-  width: 200px;
-  height: 40vh;
+  width: 300px;
+  height: 200px;
   border-radius: 20px;
   background-color: rgba(0, 0, 0, 0.2901960784);
 }
@@ -20,52 +21,52 @@
 #box .cabeca {
   border: 2px solid #fff;
   border-radius: 50%;
-  height: 92px;
-  width: 100px;
+  height: 40%;
+  width: 30%;
   left: 50%;
-  margin-top: 10px;
+  margin-top: 3%;
   transform: translateX(-50%);
   display: none;
 }
 #box .tronco {
-  height: 100px;
+  height: 36%;
   width: 2px;
   border: 1px solid #fff;
   left: 50.2%;
-  top: 34%;
+  top: 44%;
   transform: translateX(-50%);
   display: none;
 }
 #box .braco-esquerdo {
-  height: 50px;
+  height: 17%;
   border: 1px solid #fff;
-  left: 40%;
+  left: 45%;
   transform: rotate(45deg);
-  top: 34%;
+  top: 45%;
   display: none;
 }
 #box .braco-direito {
-  height: 50px;
+  height: 17%;
   border: 1px solid #fff;
-  left: 59%;
+  left: 55%;
   transform: rotate(-45deg);
-  top: 34%;
+  top: 45%;
   display: none;
 }
 #box .pe-esquerdo {
-  height: 50px;
+  height: 19%;
   border: 1px solid #fff;
-  left: 59%;
+  left: 55%;
   transform: rotate(-45deg);
-  top: 64%;
+  top: 77%;
   display: none;
 }
 #box .pe-direito {
-  height: 50px;
+  height: 19%;
   border: 1px solid #fff;
-  left: 40%;
+  left: 45%;
   transform: rotate(45deg);
-  top: 64%;
+  top: 77%;
   display: none;
 }
 #box .dica {
@@ -83,6 +84,30 @@
   white-space: nowrap;
 }
 #box .bars {
+  text-align: center;
+}
+#box #letrasErradas {
+  color: #fff;
+  margin: 20px;
+  padding: 10px;
+}
+#box #letrasErradas span {
+  margin-right: 10px;
+}
+#box #pontos {
+  color: #fff;
+  margin-bottom: 20px;
+}
+#box .pontin {
+  margin-left: 10px;
+  padding: 2px 10px;
+  background-color: #13516f;
+  font-weight: bolder;
+  color: #fff;
+}
+#box .orientation {
+  color: #fff;
+  margin-bottom: 20px;
   text-align: center;
 }
 @media (min-width: 900px) {
