--- a/assets/paleta.css
+++ b/assets/paleta.css
@@ -1,6 +1,6 @@
 /* COLORS */
 .colorWhite {
-  color: #fff;
+  color: rgb(185, 185, 185);
 }
 
 .colorBlack {
@@ -32,7 +32,7 @@
 
 .container {
   background-color: rgba(31, 31, 31, 0.492);
-  color: #fff;
+  color: rgb(185, 185, 185);
 }
 
 .container-top {
