--- a/jogoDaForca/forca.scss
+++ b/jogoDaForca/forca.scss
@@ -4,12 +4,13 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    margin-top: 50px;
     .box-boneco {
         margin-top: 10px;
         position: relative;
         border: 1px solid #fff;
-        width: 200px;
-        height: 40vh;
+        width: 300px;
+        height: 200px;
         border-radius: 20px;
         background-color: #0000004a;
     }
@@ -19,54 +20,54 @@
     .cabeca {
         border: 2px solid #fff;
         border-radius: 50%;
-        height: 92px;
-        width: 100px;
+        height: 40%;
+        width: 30%;
         left: 50%;
-        margin-top: 10px;
+        margin-top: 3%;
         transform: translateX(-50%);
         display: none;
     }
 
     .tronco {
-        height: 100px;
+        height: 36%;
         width: 2px;
         border: 1px solid #fff;
         left: 50.2%;
-        top: 34%;
+        top: 44%;
         transform: translateX(-50%);
         display: none;
     }
 
     .braco-esquerdo {
-        height: 50px;
+        height: 17%;
         border: 1px solid #fff;
-        left: 40%;
+        left: 45%;
         transform: rotate(45deg);
-        top: 34%;
+        top: 45%;
         display: none;
     }
     .braco-direito {
-        height: 50px;
+        height: 17%;
         border: 1px solid #fff;
-        left: 59%;
+        left: 55%;
         transform: rotate(-45deg);
-        top: 34%;
+        top: 45%;
         display: none;
     }
     .pe-esquerdo {
-        height: 50px;
+        height: 19%;
         border: 1px solid #fff;
-        left: 59%;
+        left: 55%;
         transform: rotate(-45deg);
-        top: 64%;
+        top: 77%;
         display: none;
     }
     .pe-direito {
-        height: 50px;
+        height: 19%;
         border: 1px solid #fff;
-        left: 40%;
+        left: 45%;
         transform: rotate(45deg);
-        top: 64%;
+        top: 77%;
         display: none;
     }
 
@@ -90,15 +91,31 @@
         text-align: center;
     }
 
-    // .input {
-    //     padding: 10px;
-    //     width:55px;
-    //     height: 50px;
-    //     margin: 20px;
-    //     font-size: 39px;
-    //     text-align: center;
-    // }
-
+    #letrasErradas {
+        color: #fff;
+        margin: 20px;
+        padding: 10px;
+    }
+    #letrasErradas span {
+        margin-right: 10px;
+    }
+ 
+    #pontos {
+        color: #fff;
+        margin-bottom: 20px;
+    }
+    .pontin {
+        margin-left: 10px;
+        padding: 2px 10px;
+        background-color: #13516f;
+        font-weight: bolder;
+        color: #fff;
+    }
+    .orientation {
+        color: #fff;
+        margin-bottom: 20px;
+        text-align: center;
+    }
     @media (min-width: 900px) {
         
         .simple-keyboard {
