--- a/assets/style.css
+++ b/assets/style.css
@@ -135,6 +135,7 @@ body {
 
 .skills-n2 {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
   padding: 20px;
