--- a/paleta.scss
+++ b/paleta.scss
@@ -44,6 +44,7 @@
 #jquery{background: -webkit-linear-gradient(left, #057282  25.20%, #000 13.20%);}
 #flex{background: -webkit-linear-gradient(left, #057282  75.20%, #000 13.20%);}
 #sql{background: -webkit-linear-gradient(left, #057282  70.20%, #000 13.20%);}
+#figma{background: -webkit-linear-gradient(left, #057282  60.20%, #000 13.20%);}
 #node{background: -webkit-linear-gradient(left, #057282  60.20%, #000 13.20%);}
 
 
