--- a/style.scss
+++ b/style.scss
@@ -131,6 +131,7 @@
   .skills-n2 {
     display: flex;
     // flex-direction: column;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     padding: 20px;
