--- a/style.scss
+++ b/style.scss
@@ -120,14 +120,7 @@
     font-size: 30px;
     text-align: center;
   }
-  .skill-bar {
-    width: 300px;
-    color: #ffffff;
-    font-style: italic;
-    text-align: center;
-    background: #ff4800;
-    margin: 10px;
-  }
+
   .skills-n2 {
     display: flex;
     // flex-direction: column;
@@ -307,8 +300,11 @@
   .color-instagram {
     background-color: #f62782;
   }
-  .color-whatsapp {
+  .color-normal {
     background-color: #191919;
+  }
+  .color-whatsapp {
+    background-color: #17611d;
   }
   
   .google-font {
