--- a/paleta.scss
+++ b/paleta.scss
@@ -22,6 +22,10 @@
 .container {
     background-color: rgba(31, 31, 31, 0.492);
     color: rgb(185 185 185);
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-start;
 }
 
 .container-top {
@@ -29,8 +33,35 @@
 }
 
 .size-of-bar {
-    border-radius: 7px;
-    padding: 5px 0;
+    width: 100%;
+}
+.skill-bar {
+    color: #ffffff;
+    font-style: italic;
+    text-align: center;
+    position: absolute;
+    bottom: 3px;
+    width: 90%;
+    left: 7px;
+    border-radius: 10px;
+    font-size: 0.8em;
+}
+.box-skill img {
+    width: 50px;
+    margin: 10px 0 0 50%;
+    transform: translate(-50%);
+}
+.box-skill {
+    border: 1px solid rgb(44, 44, 44);
+    background-color: #333333db;
+    border-radius: 10px;
+    width: 150px;
+    height: 100px;
+    position: relative;
+    margin: 5px;
+}
+.vazio {
+    opacity: 0;
 }
 
 #html{background: -webkit-linear-gradient(left, #057282  90.20%, #000 13.20%);}
@@ -41,8 +72,6 @@
 #angular{background: -webkit-linear-gradient(left, #057282  15.20%, #000 13.20%);}
 #git{background: -webkit-linear-gradient(left, #057282  75.20%, #000 13.20%);}
 #eng{background: -webkit-linear-gradient(left, #057282  65.20%, #000 13.20%);}
-#jquery{background: -webkit-linear-gradient(left, #057282  25.20%, #000 13.20%);}
-#flex{background: -webkit-linear-gradient(left, #057282  75.20%, #000 13.20%);}
 #sql{background: -webkit-linear-gradient(left, #057282  70.20%, #000 13.20%);}
 #figma{background: -webkit-linear-gradient(left, #057282  60.20%, #000 13.20%);}
 #node{background: -webkit-linear-gradient(left, #057282  60.20%, #000 13.20%);}
@@ -55,4 +84,24 @@
 .card-titulo {
     color: #fff4f4;
     background-color: rgba(0, 0, 0, 0.2784313725);
+}
+
+
+@media (max-width: 600px){
+    .container {
+        justify-content: center;
+    }
+    .box-skill {
+        width: calc(100% / 3.4);
+    }
+}
+@media (max-width: 420px){
+    .box-skill {
+        width: calc(100% / 2.3);
+    }
+}
+@media (max-width: 320px){
+    .box-skill {
+        width: calc(100% / 1);
+    }
 }
