--- a/assets/style.css
+++ b/assets/style.css
@@ -361,6 +361,11 @@ body {
   margin: 30px auto 0 auto;
 }
 
+.owl-carousel .owl-item img {
+  width: 80% !important;
+  margin-top: 25px;
+}
+
 .projects {
   display: flex;
   flex-wrap: wrap;
