--- a/assets/paleta.css
+++ b/assets/paleta.css
@@ -33,14 +33,13 @@
 .container {
   background-color: rgba(31, 31, 31, 0.492);
   color: rgb(185, 185, 185);
+}
+
+.container-skills {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: flex-start;
-}
-
-.container-top {
-  background-color: rgba(19, 19, 19, 0.7176470588);
 }
 
 .size-of-bar {
@@ -48,7 +47,7 @@
 }
 
 .skill-bar {
-  color: #ffffff;
+  color: #b0b0b0;
   font-style: italic;
   text-align: center;
   position: absolute;
@@ -66,10 +65,11 @@
 }
 
 .box-skill {
-  border: 1px solid rgb(44, 44, 44);
-  background-color: rgba(51, 51, 51, 0.8588235294);
+  border: 1px solid rgb(107, 107, 107);
+  background: rgb(57, 57, 57);
+  background: linear-gradient(144deg, rgb(57, 57, 57) 53%, rgb(61, 61, 61) 67%, rgb(121, 124, 131) 98%);
   border-radius: 10px;
-  width: 150px;
+  width: 19%;
   height: 100px;
   position: relative;
   margin: 5px;
@@ -124,7 +124,7 @@
 }
 
 .card-fundo {
-  background-color: #057282;
+  background-color: rgba(5, 114, 130, 0.5490196078);
   border: 1px solid #2fe3ff;
 }
 
@@ -134,11 +134,11 @@
 }
 
 @media (max-width: 600px) {
-  .container {
+  .container-skills {
     justify-content: center;
   }
   .box-skill {
-    width: 29.4117647059%;
+    width: 45.4545454545%;
   }
 }
 @media (max-width: 420px) {
@@ -146,8 +146,18 @@
     width: 43.4782608696%;
   }
 }
+@media (min-width: 600px) and (max-width: 1156px) {
+  .box-skill {
+    width: 31.25%;
+  }
+}
 @media (max-width: 320px) {
   .box-skill {
     width: 100%;
+  }
+}
+@media (min-width: 1056px) {
+  .box-skill {
+    width: 18.8679245283%;
   }
 }/*# sourceMappingURL=paleta.css.map */
