--- a/paleta.scss
+++ b/paleta.scss
@@ -22,21 +22,22 @@
 .container {
     background-color: rgba(31, 31, 31, 0.492);
     color: rgb(185 185 185);
+   
+}
+
+.container-skills {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: flex-start;
 }
 
-.container-top {
-    background-color:#131313b7;
-}
 
 .size-of-bar {
     width: 100%;
 }
 .skill-bar {
-    color: #ffffff;
+    color: #b0b0b0;
     font-style: italic;
     text-align: center;
     position: absolute;
@@ -51,11 +52,13 @@
     margin: 10px 0 0 50%;
     transform: translate(-50%);
 }
+
 .box-skill {
-    border: 1px solid rgb(44, 44, 44);
-    background-color: #333333db;
+    border: 1px solid rgb(107, 107, 107);
+    background: rgb(57,57,57);
+    background: linear-gradient(144deg, rgba(57,57,57,1) 53%, rgba(61,61,61,1) 67%, rgba(121,124,131,1) 98%);
     border-radius: 10px;
-    width: 150px;
+    width: 19%;
     height: 100px;
     position: relative;
     margin: 5px;
@@ -78,7 +81,7 @@
 
 
 .card-fundo {
-    background-color: #057282;
+    background-color: #0572828c;
     border: 1px solid #2fe3ff;
 }
 .card-titulo {
@@ -88,11 +91,11 @@
 
 
 @media (max-width: 600px){
-    .container {
+    .container-skills {
         justify-content: center;
     }
     .box-skill {
-        width: calc(100% / 3.4);
+        width: calc(100% / 2.2);
     }
 }
 @media (max-width: 420px){
@@ -100,8 +103,18 @@
         width: calc(100% / 2.3);
     }
 }
+@media (min-width: 600px ) and (max-width: 1156px){
+    .box-skill {
+        width: calc(100% / 3.2);
+    }
+}
 @media (max-width: 320px){
     .box-skill {
         width: calc(100% / 1);
+    }
+}
+@media (min-width: 1056px){
+    .box-skill {
+        width: calc(100% / 5.3);
     }
 }
