--- a/style.scss
+++ b/style.scss
@@ -35,7 +35,7 @@
     top: 0px;
   }
   .scroll-n1 {
-    width: 90vw;
+    width: 84vw;
     height: auto;
     margin: 100px 0;
     display: flex;
@@ -98,7 +98,7 @@
   }
   .info-page p {
     text-align: left;
-    padding: 5px;
+    padding: 5px 0;
     width: 100%;
   }
   
