--- a/src/index.scss
+++ b/src/index.scss
@@ -1,19 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
+html {
+  scroll-behavior: smooth;
+
+}
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-
-
   background-image: url('https://cdn.wallpapersafari.com/39/85/TNHIlB.jpg');
-  // background-image: url('https://static.vecteezy.com/ti/vetor-gratis/p3/2207821-fundo-azul-escuro-tecnologia-modena-gr%C3%A1tis-vetor.jpg');
   background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
 }
 
-
+::-webkit-scrollbar {
+  width: 5px;
+  background-color: rgb(0, 0, 0);
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgb(34, 102, 148);
+}
 
