--- a/src/App.scss
+++ b/src/App.scss
@@ -40,16 +40,38 @@
         border: 1px solid #4a4a4a;
         border-radius: 20px;
         background-color: rgba(48, 48, 48, 0.856);
-        width: auto;
+        width: 300px;
         height: 500px;
-        transition: all 0.2s;
         padding: 10px;
+        transition: all .1s;
+
+        @keyframes showInfo {
+            from {transform: scale(1);}
+            to {transform:  scale(1.03);}
+        }
+
         &:hover {
-            transform: scale(1.02);
-            transition: all 0.2s;
+            position: absolute;
+            z-index: 888;
+            background-color: rgb(29, 29, 29);
+            color: lime;
+            font-weight: 900;
+            line-height: 1.6;
+            transform:  scale(1.03);
+            animation: showInfo 0.5s alternate ease-in-out;
+            transition: all .1s;
+            & .info-card {
+                display: none;
+            }
+            & .text-card {
+                display: block;
+            }
         }
     }
-
+   
+    .text-card {
+        display: none;
+    }
     .personPhoto {
         width: 300px;
         height: 300px;
