--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,79 @@
 
 .container-top {
     background-image: url('./assets/img/modelo-1.jpg');
-    background-position: center center;
+    background-position: bottom center;
     background-repeat: no-repeat;
     background-size: cover;
     height: 800px;
 
+    .navbar {
+        position: absolute;
+        color: #fff;
+        width: 100%;
+        ul {
+            display: flex;
+            justify-content: right;
+            list-style: none;
+        }
+        li {
+            margin-right: 50px;
+            border: 1px solid #5a5a5a;
+            padding: 5px 20px;
+            background-color: #001f4e;
+            border-radius: 2px;
+            transition: all .2s;
+            &:hover {
+                background-color: #344da9;
+                transition: all .2s;
+                cursor: pointer;
+            }
+        }
+    }
+    .box-astronauta {
+        position: relative;
+        .text-astronauta {
+            position: absolute;
+            right: 200px;
+            top: 330px;
+            color: #000;
+            border-radius: 2px;
+            font-weight: bolder;
+            border: 1px solid;
+            padding: 10px;
+            background-color: #fff;
+            animation: animaOpacityText 2s alternate ease-in-out;
+            &::after {
+                content: '';
+                /* border: 1px solid; */
+                position: absolute;
+                right: -5px;
+                bottom: -1px;
+                width: 25px;
+                height: 12px;
+                background-color: white;
+                border-bottom-left-radius: 23px;
+                border-top-right-radius: -11px;
+                transform: rotate(187deg);
+            }
+        }
+        .astronauta {
+            z-index: 999;
+            width: 200px;
+            position: absolute;
+            right: 0;
+            top: 350px;
+            animation: animaRightToLeft 2s alternate ease-in-out;
+        }
+    }
+    
     .caixa-foguete {
         position: absolute;
-        left: 59%;
-        top: 440px;
+        left: 50%;
+        top: 500px;
         transform: translate(-50%, -50%);
         .foguete {
-            width: 120px;
-            height: 220px;
+            width: 100px;
+            height: 165px;
             position: relative;
             border: 1px solid rgba(255, 0, 0, 0);
             z-index: 99;
@@ -37,6 +97,97 @@
     }
 }
 
+
+.container {
+    background-color: #421f95;
+    margin-top: 50px;
+}
+.name-skills {
+    display: flex;
+    color: #fff;
+    width: 90vw;
+    height: 500px;
+    border: 1px solid #fff;
+
+    margin: 0 auto;
+    background-color: #2e2e2e;
+    .box-buttons {
+        margin: 0;
+        width: 150px;
+        height: 100%;
+        list-style: none;
+        padding: 0;
+        .buttonActive {
+            border: none;
+            text-align:center;
+            padding: 20px 0px;
+            height: 25%;
+            width: 100%;
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: #2e2e2e;
+            transition: all .2s;
+            cursor: pointer;
+        }
+        .buttonInative {
+            text-align:center;
+            padding: 20px 0px;
+            height: 25%;
+            width: 100%;
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: #00000091;
+            transition: all .2s;
+            &:hover {
+                background-color: #2c35a1;
+                cursor: pointer;
+                transition: all .2s;
+            }
+        }
+    }
+    .container-skills {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        overflow-y: auto;
+        gap: 10px;
+        padding: 20px;
+        width: 100%;
+        grid-auto-rows: max-content;
+        .box-skill {
+            border: 1px solid;
+            display: flex;
+            padding: 10px 20px;
+            background-color: #000000;
+            height: max-content;
+            img {
+                width: 50px;
+            }
+            p {
+                margin: 0 20px 0 20px;
+                white-space: nowrap;
+            }
+            .size-Progressbar {
+                width: 100%;
+            }
+            .progressBar {
+                border: 1px solid #000;
+                font-weight: bolder;
+                padding: 2px;
+                margin: 10px 10px 0 20px;
+                height: 10px;
+            }
+        }
+    }
+}
+
+
+
 @keyframes animaOpacity {
     0%{opacity: 1;}
     40%{opacity: 0;}
@@ -45,6 +196,15 @@
     90%{opacity: 1;}
     100%{ opacity: 0;}
 }
+@keyframes animaOpacityText {
+    0%{opacity: 0;}
+    80%{opacity: 0;}
+    100%{ opacity: 1;}
+}
+@keyframes animaRightToLeft {
+    0%{right: -200px;}
+    100%{right: 0;}
+}
 
 @keyframes animaFoguete {
     0%{top: -800px}
@@ -52,7 +212,56 @@
 }
 
 
-.container {
-    height: 500px;
-    background-color: #421f95;
+
+@media (max-width: 1242px) {
+    .name-skills {
+        .container-skills {
+            grid-template-columns: repeat(3, 1fr);
+        }
+    }
 }
+@media (max-width: 950px) {
+    .name-skills {
+        .container-skills {
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+}
+@media (max-width: 740px) {
+    .name-skills {
+        .box-buttons {
+            width: 100px;
+        }
+        .container-skills {
+            grid-template-columns: repeat(1, 1fr);
+        }
+    }
+}
+@media (max-width: 600px) {
+    .container-top {
+        .navbar{
+            ul{
+                justify-content: space-around;
+                padding: 0;
+            }
+            li {
+                margin-right: 0px;
+            }
+        }
+    }
+}
+@media (min-width: 1350px) {
+    .container-top {
+        .caixa-foguete {
+            top: 450px;
+        }
+    }
+}
+@media (min-width: 1650px) {
+    .container-top {
+        .caixa-foguete {
+            top: 400px;
+        }
+    }
+}
+
