--- a/src/index.scss
+++ b/src/index.scss
@@ -9,13 +9,14 @@ body {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #421f95;
 }
 
-// ::-webkit-scrollbar {
-//   width: 5px;
-//   background-color: rgb(0, 0, 0);
-// }
-// ::-webkit-scrollbar-thumb {
-//   background-color: rgb(34, 102, 148);
-// }
+::-webkit-scrollbar {
+  width: 7px;
+  background-color: rgb(0, 0, 0);
+}
+::-webkit-scrollbar-thumb {
+  background-color: #344da9
+}
 
