--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,6 @@ body {
   background-color: rgb(0, 0, 0);
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #344da9
+  background-color: #344da9;
 }
 
