--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@ body {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #421f95;
+  background-color: #31186a;
 }
 
 ::-webkit-scrollbar {
