--- a/src/App.scss
+++ b/src/App.scss
@@ -126,15 +126,19 @@
 
 
 .container {
-    // background-color: #421f95;
+    width: 90vw;
+    margin: 0 auto;
+    background-color: #2e2e2e;
+    color: #fff;
+    box-shadow: 0px 0px 7px 0px black;
 }
 .name-skills {
     display: flex;
-    color: #fff;
-    width: 90vw;
+    // color: #fff;
+    // width: 90vw;
     height: 500px;
-    margin: 0 auto;
-    background-color: #2e2e2e;
+    // margin: 0 auto;
+    // background-color: #2e2e2e;
     .box-buttons {
         box-shadow: 0px 0px 7px 0px black;
         margin: 0;
@@ -213,9 +217,9 @@
 }
 
 .projects-box {
-    width: 90vw;
-    margin: 0 auto 50px auto;
-    background-color: #2e2e2e;
+    // width: 90vw;
+    // margin: 0 auto 50px auto;
+    // background-color: #2e2e2e;
     .project-box {
         padding: 20px;
         display: grid;
@@ -251,11 +255,11 @@
 
 
 .box-aboutMe {
-    width: 90vw;
-    margin: 0 auto;
-    background-color: #2e2e2e;
-    color: #fff;
-    box-shadow: 0px 0px 7px 0px black;
+    // width: 90vw;
+    // margin: 0 auto;
+    // background-color: #2e2e2e;
+    // color: #fff;
+    // box-shadow: 0px 0px 7px 0px black;
     position: relative;
     .aboutMe-box {
         display: flex;
@@ -285,6 +289,17 @@
         }
     }
 }
+
+
+.box-contact-me {
+    height: 300px;
+}
+
+
+
+
+
+
 
 @keyframes naveEspacialAnima {
     0%{right: 10px;}
